environments/04/ftp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftp-service
  namespace: "hello-openshift-04"
  labels:
    app: ftp-app
spec:
  type: NodePort
  ports:
    - port: 21
      nodePort: 30082
  selector:
    app: ftp
